# MacroRecorder

./: .gitignore  Cargo.toml  LICENSE  README.md  build_rust.bat  demo.mcr
src/: events.rs  hooks.rs  main.rs  player.rs  recorder.rs
